Fix buildSrc build
The recent upgrade to JDK 17 broke the buildSrc build as the
`ProjectBuilder.builder().build()` call in
`GenerateJsonTestSuiteTaskTest.sanityCheckTask` triggered the
`GradleException: Could not inject synthetic classes` from this issue:
https://github.com/gradle/gradle/issues/18647

Apply the `jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')`
workaround provided in:
https://github.com/gradle/gradle/issues/18647#issuecomment-1189222029

This was caught by CI thanks to 4397f87 and c0f1a60